--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body> <div>Saad</div>
+  <body>
+    <div id="root"></div> <!-- This is where React will render the app -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
